# chuuni-voice

./: .gitignore  README.md  final_test.py  hero_stats.py  pyproject.toml  test_final_test.py  test_hero_stats.py
chuuni_voice/: __main__.py  cli.py  config.py  daemon.py  events.py  player.py  rvc.py
chuuni_voice/assets/: character.toml.example
chuuni_voice/assets/characters/genki-girl/: CREDITS.md  character.toml
chuuni_voice/assets/default/: README.md
chuuni_voice/characters/: base.py
chuuni_voice/hooks/: claude_code.py
tests/: test_characters.py  test_cli.py  test_daemon.py  test_player.py  test_rvc.py
tools/: clip_voice.py
