[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chuuni-voice"
version = "0.1.0"
description = "Anime character voices for Claude Code hooks — give your AI assistant the voice of an anime hero"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["anime", "voice", "claude-code", "developer-tools", "tts", "rvc", "hooks"]
dependencies = [
    "click>=8.0",
    "filelock>=3.0",
    "requests>=2.28",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
    "python-dotenv>=1.0",
]

[project.scripts]
chuuni = "chuuni_voice.cli:main"

[project.optional-dependencies]
rvc = [
    "torch",
    "numpy",
    "soundfile",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.hatch.version]
path = "chuuni_voice/__init__.py"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
